...
        android:layout_height="wrap_content"
        android:text="ADD NOTE"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgDelete"
        app:layout_constraintStart_toEndOf="@+id/imgBack"
        app:layout_constraintTop_toTopOf="@+id/imgBack" />

    <ImageView
        android:visibility="gone"
        android:id="@+id/imgDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgSave"
        app:layout_constraintTop_toTopOf="@+id/imgBack" />

    <ImageView
        android:id="@+id/imgSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
